--- a/lecture_2.4/ExceptionHw.cls
+++ b/lecture_2.4/ExceptionHw.cls
@@ -1,7 +1,8 @@
 public class ExceptionHw {
     public class CusomException extends Exception {}
 
-    /*Anonymous
+    /*Adding a tourist and registering him for the flight.
+    Anonymous:
     Tourist__c touristFirst = new Tourist__c();
 	ExceptionHw.methodFirst(touristFirst);*/
     public static void methodFirst(Tourist__c touristFirst) {
@@ -13,8 +14,9 @@ public class ExceptionHw {
             throw new CusomException('First exception ' + e.getCause());
         }
     }
-    
-    /*Anonymous
+
+    /*Search for the name (s) of flights for which this tourist is registered.
+    Anonymous
     Tourist__c touristFirst = new Tourist__c();
 	ExceptionHw.methodSecond(touristFirst);*/
     public static void methodSecond(Tourist__c touristFirst) {
@@ -27,15 +29,23 @@ public class ExceptionHw {
     }
 
     /*Anonymous
+    Tourist__c touristFirst = new Tourist__c();
+    ExceptionHw.methodThird(touristFirst);
+    
+	Working:
     Tourist__c touristSecond = new Tourist__c(Name = 'Vova', LastName__c = 'Ivanov', Birthdate__c = Date.newInstance(2002,1,17));
     ExceptionHw.methodThird(touristSecond);*/
-    public static void methodThird(Tourist__c touristSecond) {
+    public static void methodThird(Tourist__c touristFirst) {
+        Tourist__c t = new Tourist__c();
         try {
-            methodFirst(touristSecond);
-            methodSecond(touristSecond);
+            if (t == touristFirst) {
+                throw new CusomException('No tourist information.');
+            } else {
+                methodFirst(touristFirst);
+                methodSecond(touristFirst);
+            }
         } finally {
             System.debug('The end');
         }
     }
-
 }
