--- a/lecture_2.2/AutomaticFillingTrip.cls
+++ b/lecture_2.2/AutomaticFillingTrip.cls
@@ -3,9 +3,9 @@ public class AutomaticFillingTrip {
     @InvocableMethod(label = 'Automatic tourist registration'
         description = 'Registration of free tourists'
         category = 'Trip__c')
-    public static void fillingTrip(List<Trip__c> trip) {
+    public static void fillingTrip(List <Trip__c> trip) {
 
-        List<Tourist__c> freeTourists = TouristManager.touristNotRegistered();
+        List<Tourist__c> freeTourists = TouristManager.getNotRegisteredOnTheTrip();
         trip = [
             SELECT Id,
             Name,
@@ -16,13 +16,14 @@ public class AutomaticFillingTrip {
         List<Tourist__c> filteredTourists = new List<Tourist__c> ();
         List<Flight__c> registerAtourist = new List<Flight__c> ();
 
-        for (Tourist__c tourist1: freeTourists) {
-            for (Trip__c trips1: trip) {
-                if (tourist1.Age__c > trips1.Minimum_Age__c && !filteredTourists.contains(tourist1)) {
-                    filteredTourists.add(tourist1);
+        for (Tourist__c touristFirst: freeTourists) {
+
+            for (Trip__c tripsFirst: trip) {
+                if (touristFirst.Age__c > tripsFirst.Minimum_Age__c && !filteredTourists.contains(touristFirst)) {
+                    filteredTourists.add(touristFirst);
                     Flight__c newRegister = new Flight__c();
-                    newRegister.Tourist__c = tourist1.Id;
-                    newRegister.Trip__c = trips1.Id;
+                    newRegister.Tourist__c = touristFirst.Id;
+                    newRegister.Trip__c = tripsFirst.Id;
                     newRegister.Status__c = 'Accepted';
                     registerAtourist.add(newRegister);
                 }
