--- a/lecture_2.2/TouristService.cls
+++ b/lecture_2.2/TouristService.cls
@@ -1,29 +1,25 @@
 public class TouristService {
     
     public static void markDuplicates(List<Tourist__c> newTourists) {
-        if (!newTourists.isEmpty() && newTourists!=null ) {
-            newTourists = [
-                SELECT LastName__c,
-                Email__c,
-                IsDuplicate__c
-                FROM Tourist__c
-            ];
-            List<Tourist__c> touristsDuplicate = new List<Tourist__c> ();
+        if (newTourists == null || newTourists.isEmpty()) return;
+        List<Tourist__c> touristsAll = TouristManager.getLastnameEmailIsDuplicate();
+        List<Tourist__c> touristsDuplicate = new List<Tourist__c> ();
+        
+        for (Tourist__c touristFirst : newTourists) {
+            Integer count = 0;
             
-            for (Tourist__c touristFirst: newTourists) {
-                Integer count = 0;
-                
-                for (Tourist__c touristSecond: newTourists) {
-                    if (touristFirst.Email__c == touristSecond.Email__c && touristFirst.LastName__c == touristSecond.LastName__c) {
-                        count++;
-                        if (count > 1 && touristFirst.Id == touristSecond.Id) {
-                            touristSecond.IsDuplicate__c = true;
-                            touristsDuplicate.add(touristSecond);
-                        }
+            for (Tourist__c touristSecond : touristsAll) {
+                Boolean isEmail = (touristFirst.Email__c == touristSecond.Email__c);
+                Boolean isLastName = (touristFirst.LastName__c == touristSecond.LastName__c);
+                if (isEmail && isLastName) {
+                    count++;
+                    if (count > 1) {
+                        touristFirst.IsDuplicate__c = true;
+                        touristsDuplicate.add(touristFirst);
                     }
                 }
             }
-            update touristsDuplicate;
         }
+        //update touristsDuplicate; //for a trigger (befor insert) this line is not needed
     }
 }
