--- a/lecture_2.2/TripManager.cls
+++ b/lecture_2.2/TripManager.cls
@@ -1,15 +1,18 @@
 public class TripManager {
     
     public static List<Trip__c> getAndTourists(List<Trip__c> trips) {
+        if (trips == null || trips.isEmpty()) {
+            return new List<Trip__c> ();
+        }
         List<Trip__c> andTourists = [
-                SELECT Id,
-                Name,
-                Minimum_Age__c,
-                (SELECT Id, Tourist__r.Name, Tourist__r.Age__c FROM Flights__r)
-                FROM Trip__c 
-                WHERE Id IN :trips
-            ];
+            SELECT Id,
+            Name,
+            Minimum_Age__c,
+            (SELECT Id, Tourist__r.Name, Tourist__r.Age__c FROM Flights__r)
+            FROM Trip__c 
+            WHERE Id IN :trips
+        ];
         return andTourists;
     }
-
+    
 }
