--- a/lecture_2.3/TouristService.cls
+++ b/lecture_2.3/TouristService.cls
@@ -2,24 +2,24 @@ public class TouristService {
     
     public static void markDuplicates(List<Tourist__c> newTourists) {
         if (newTourists == null || newTourists.isEmpty()) return;
-        List<Tourist__c> touristsAll = TouristManager.getLastnameEmailIsDuplicate();
-        List<Tourist__c> touristsDuplicate = new List<Tourist__c> ();
+        Set<String> lastnames =  new Set<String> ();
+        Set<String> emails = new Set<String> ();
+        
+        for (Tourist__c t : newTourists) {
+            lastnames.add(t.LastName__c);
+            emails.add(t.Email__c);
+        }
+        List<Tourist__c> touristsAll = TouristManager.getTheSame(lastnames, emails);
         
         for (Tourist__c touristFirst : newTourists) {
-            Integer count = 0;
             
             for (Tourist__c touristSecond : touristsAll) {
                 Boolean isEmail = (touristFirst.Email__c == touristSecond.Email__c);
                 Boolean isLastName = (touristFirst.LastName__c == touristSecond.LastName__c);
                 if (isEmail && isLastName) {
-                    count++;
-                    if (count > 1) {
-                        touristFirst.IsDuplicate__c = true;
-                        touristsDuplicate.add(touristFirst);
-                    }
+                    touristFirst.IsDuplicate__c = true;
                 }
             }
         }
-        //update touristsDuplicate; //for a trigger (befor insert) this line is not needed
     }
 }
