--- a/lecture_2.3/TouristTriggerHandler.cls
+++ b/lecture_2.3/TouristTriggerHandler.cls
@@ -2,11 +2,11 @@ public class TouristTriggerHandler {
     
     public static Boolean isFirstTime = true;
     
-    public static void duplicates(List<Tourist__c> newTourists) {
+    public static void onBeforeInsert(List<Tourist__c> newTourists) {
         TouristService.markDuplicates(newTourists);
     }
     
-    public static void flightStatusDeclined(List<Tourist__c> newTourists) {
+    public static void onAfterUpdate(List<Tourist__c> newTourists) {
         if (newTourists == null || newTourists.isEmpty()) return;
         List<Flight__c> flights = FlightManager.getStatusTourist(newTourists);
         List<FlIght__c> newStatus = new List<FlIght__c> ();
