--- a/lecture_2.3/Constants.cls
+++ b/lecture_2.3/Constants.cls
@@ -2,4 +2,5 @@ public class Constants {
     
     public static final String ERROR_AGE = 'Not suitable for age.';
     public static final String ERROR_DATE = 'Already flew away.';
+    public static final String STATUS_DECLINED = 'Declined';
 }
