--- a/lecture_2.4/ExceptionsPlayground.cls
+++ b/lecture_2.4/ExceptionsPlayground.cls
@@ -1,13 +1,14 @@
 public class ExceptionsPlayground {
     public class CustomException extends Exception {}
     
-    public static void generateCustomException() { 
+    public static void generateCustomException() {
         try {
             Tourist__c touristFirst = new Tourist__c ();
-            Insert touristFirst;
-            Flight__c flighttouristFirst = new Flight__c (Status__c = Constants.FLIGHT_STATUS_ACCEPTED, 
-                                                          Tourist__c = touristFirst.Id, 
-                                                          Trip__c = 'a085g0000011IV3AAM');
+            Flight__c flighttouristFirst = new Flight__c(
+                Status__c = Constants.FLIGHT_STATUS_ACCEPTED,
+                Tourist__c = touristFirst.Id,
+                Trip__c = 'a085g0000011IV3AAM'
+            );
             Insert flighttouristFirst;
         } catch (DmlException e) {
             throw new CustomException('An exception ' + e.getCause());
@@ -18,9 +19,8 @@ public class ExceptionsPlayground {
         try {
             Tourist__c touristFirst = new Tourist__c ();
             Flight__c nameFlight = FlightManager.getName(touristFirst);
-            //System.debug('Name(s) of the flight(s) for which the tourist is registered: ' + nameFlight);
         } catch (QueryException qe) {
-            throw qe;
+            System.debug('The following exception has occurred: ' + qe.getMessage());
         }
     }
     
@@ -28,17 +28,12 @@ public class ExceptionsPlayground {
         try {
             generateCustomException();
             generateRegularException();
-        } catch (Exception x) {
-            Tourist__c touristSecond = new Tourist__c (Name = 'Vova', 
-                                                       LastName__c = 'Ivanov', 
-                                                       Birthdate__c = Date.newInstance(2002, 1, 17));
-            Insert touristSecond;
-            Flight__c flightTouristSecond = new Flight__c (Status__c = Constants.FLIGHT_STATUS_ACCEPTED, 
-                                                           Tourist__c = touristSecond.Id, 
-                                                           Trip__c = 'a085g0000011IV3AAM');
-            Insert flightTouristSecond;
-            Flight__c nameFlight = FlightManager.getName(touristSecond);
-            //System.debug('Name(s) of the flight(s) for which the tourist is registered: ' + nameFlight);
+        } catch(DmlException e) {
+            System.debug('DmlException caught');    
+        } catch(QueryException qe) {
+            System.debug('QueryException caught');    
+        } catch(Exception ex) {
+            System.debug('Exception caught');    
         }
     }
 }
