--- a/lecture_2.4/Constants.cls
+++ b/lecture_2.4/Constants.cls
@@ -4,4 +4,8 @@ public class Constants {
     public static final String ERROR_DATE = 'Already flew away.';
     public static final String FLIGHT_STATUS_DECLINED = 'Declined';
     public static final String FLIGHT_STATUS_ACCEPTED = 'Accepted';
+    public static final String EXECEPTION_TEXT = 'The following exception has occurred: ';
+    public static final String EXECEPTION_DML = 'DmlException caught.';
+    public static final String EXECEPTION_QUERY = 'QueryException caught.';
+    public static final String EXECEPTION_GENERAL = 'Exception caught.';
 }
